--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -51,7 +51,7 @@
         </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel Margin="0 10 0 0" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border Visibility="Visible" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
+                <Border x:Name="PassportBorder" Visibility="Visible" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
                     <Grid Margin="10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="1*"/>
@@ -192,7 +192,7 @@
                         </Grid>
                     </Grid>
                 </Border>
-                <Border Visibility="Visible" Style="{DynamicResource BorderInformationWorker}">
+                <Border x:Name="PlaceResidenceBorder" Visibility="Collapsed" Style="{DynamicResource BorderInformationWorker}">
                     <Grid Margin="10">
                         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <StackPanel HorizontalAlignment="Center" Margin="0 0 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
