--- a/DesctopHITE/App.xaml
+++ b/DesctopHITE/App.xaml
@@ -19,6 +19,7 @@
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\HyperlinkDictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\ImageDictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\ScrollViewerDictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\ComboBoxDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
