--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -51,7 +51,7 @@
         </StackPanel>
         <ScrollViewer Grid.Column="1">
             <StackPanel Margin="0 10 0 0" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border x:Name="PassportBorder" Visibility="Visible" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
+                <Border x:Name="PassportBorder" Visibility="Collapsed" Style="{DynamicResource BorderInformationWorker}" Margin="0 0 0 10">
                     <Grid Margin="10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="1*"/>
@@ -343,6 +343,26 @@
                                 MaxHeight="130"
                                 MinHeight="45"
                                 Style="{DynamicResource MainTextBoxStyle}"/>
+                        </StackPanel>
+                    </StackPanel>
+                </Border>
+                <Border x:Name="SnilsBorder" Visibility="Collapsed" Style="{DynamicResource BorderInformationWorker}">
+                    <StackPanel Orientation="Horizontal" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <StackPanel Margin="0 5 10 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <TextBlock
+                                Text="Номер"
+                                Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"/>
+                            <TextBox
+                                Width="310"
+                                Style="{DynamicResource MainTextBoxStyle}"/>
+                        </StackPanel>
+                        <StackPanel Margin="10 5 0 5" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                            <TextBlock
+                                Style="{DynamicResource TextBlockDominatesTextBoxTextBlock}"
+                                Text="Дата выдачи"/>
+                            <TextBox
+                                Style="{DynamicResource MainTextBoxStyle}"
+                                Width="270"/>
                         </StackPanel>
                     </StackPanel>
                 </Border>
