--- a/DesctopHITE/AppDateFolder/StyleFolder/ComboBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ComboBoxDictionary.xaml
@@ -87,11 +87,11 @@
                                 MinWidth="{TemplateBinding ActualWidth}"
                                 MaxHeight="{TemplateBinding MaxDropDownHeight}">
                                 <Border 
-                                    CornerRadius="0 0 10 10"
+                                    CornerRadius="10"
                                     x:Name="DropDownBorder"
-                                    Background="#2a2a2a"
+                                    Background="#202020"
                                     BorderThickness="1"
-                                    BorderBrush="#8c8a8c"/>
+                                    BorderBrush="#462AD8"/>
                                 <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
                                     <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
                                 </ScrollViewer>
@@ -138,7 +138,7 @@
                     <Border 
                         Name="Border"
                         Padding="2"
-                        CornerRadius="0 0 10 10"
+                        CornerRadius="5"
                         SnapsToDevicePixels="true">
                         <ContentPresenter />
                     </Border>
